finally fixed scrolling issue on mobile

--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@ html {
     font-family: 'Raleway', sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+    position: relative;
+}
+
 /* Main font stylings */
 h2 {
     font-size: 72px;
@@ -539,6 +544,10 @@ canvas {
 /* Divder rows */
 .blank {
     height: 100px;
+    width: 100%;
+    margin-left: 0px;
+    overflow-x: hidden;
+    padding-left: 11px;
 }
 
 .footer {
